# mcp-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
.streamlit/: config.toml
app/: __init__.py  main.py
app/components/: __init__.py  result_display.py  sidebar.py  task_panel.py
app/utils/: __init__.py  demo_scenarios.py
demo_data/: init_schema.sql  sample_logs.json  sample_sales.csv
docs/: ARCHITECTURE.md  DEMO_GUIDE.md
scripts/: run_all_servers.sh  run_demo.sh  setup.sh
servers/: __init__.py
servers/file_analyzer/: __init__.py  server.py  tools.py
servers/file_analyzer/tests/: __init__.py  test_server.py
servers/sqlite_agent/: __init__.py  sqlite_server.py  tools.py
servers/sqlite_agent/tests/: __init__.py  test_server.py
