[project]
name = "mcp-demo"
version = "0.1.0"
description = "MCP Demo - Show Agent executing tasks via MCP tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "streamlit>=1.30.0",
    "anthropic>=0.40.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["servers", "app"]

[tool.ruff]
line-length = 100
target-version = "py310"